<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/cardview_dark_background">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="100"
        android:layout_margin="5dp"
        android:orientation="vertical"
        android:gravity="center"
        >
    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:padding="10dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="50dp"
        android:padding="20dp"
        android:backgroundTint="@color/white"
        android:background="@drawable/border"
        android:foregroundTint="@color/cardview_dark_background"
        android:gravity="center">
        <TextView
            android:id="@+id/score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/score"
            android:textAlignment="center"
            android:textColor="@color/cardview_dark_background"
            android:textSize="25sp"
            />
        <TextView
            android:id="@+id/score_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/share"
            android:textAlignment="center"
            android:textColor="@color/cardview_dark_background"
            android:textSize="15sp"
            android:paddingBottom="20dp"
            />
    <TextView
        android:id="@+id/difficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/difficult"
        android:textAlignment="center"
        android:textColor="@color/cardview_dark_background"
        android:textSize="25sp"
        />
        <TextView
            android:id="@+id/difficulty_choose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/share"
            android:textAlignment="center"
            android:textColor="@color/cardview_dark_background"
            android:textSize="15sp"
            android:paddingBottom="20dp"
            />


        <TextView
            android:id="@+id/pseudoScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/pseudo"
            android:textAlignment="center"
            android:textColor="@color/cardview_dark_background"
            android:textSize="25sp"
            android:labelFor="@+id/pseudo_input"
            />
        <EditText
            android:id="@+id/pseudo_input"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:textColor="@color/black"
            android:ems="10"
            android:labelFor="@id/pseudo_input"
            android:inputType="textShortMessage"
            android:hint="@string/pseudo_enter"
            android:textColorHint="@color/black"
            />

        <ImageButton
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="33"
            android:adjustViewBounds="true"
            android:background="@color/white"
            android:contentDescription="@string/play"

            android:padding="25dp"
            android:foreground="@drawable/save_alt"
            android:foregroundTint="@color/cardview_dark_background"
            />



    </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>