<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/cardview_dark_background"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/difficulty"
            android:layout_marginTop="-60dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="25sp"
            />

        <Button
            android:id="@+id/normalButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:backgroundTint="@color/cardview_dark_background"
            android:foreground="@drawable/border"
            android:layout_margin="50dp"
            android:text="@string/normal" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/cardview_dark_background"
        >
        <Button
            android:id="@+id/hardButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:backgroundTint="@color/cardview_dark_background"
            android:foreground="@drawable/border"
            android:layout_marginHorizontal="50dp"
            android:text="@string/hard" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/description"
            android:textAlignment="center"
            android:textColor="@color/white"

            android:textSize="12sp" />
            </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>