<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/cardview_dark_background"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:padding="100dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal"
            >

            <ImageButton
                android:id="@+id/playButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="33"
                android:adjustViewBounds="true"
                android:background="@color/cardview_dark_background"
                android:contentDescription="@string/play"
                android:padding="20dp"
                app:srcCompat="@android:drawable/ic_media_play" />

            <ImageButton
                android:id="@+id/scoreButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="33"
                android:adjustViewBounds="true"
                android:background="@color/cardview_dark_background"
                android:contentDescription="@string/score"
                android:padding="20dp"
                app:srcCompat="@android:drawable/btn_star_big_off" />

            <ImageButton
                android:id="@+id/shareButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="33"
                android:background="@color/cardview_dark_background"
                android:contentDescription="@string/share"
                android:foregroundTint="@color/white"
                android:padding="20dp"
                app:tint="#FFFFFF"
                app:srcCompat="@android:drawable/ic_menu_share" />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>