<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/cardview_dark_background"
    android:id="@+id/share_view_fragment">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:id="@+id/textClassement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/share"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="50dp"
        android:backgroundTint="@color/white"
        android:background="@drawable/border"
        android:foregroundTint="@color/cardview_dark_background"
        android:gravity="center">
        <TextView
            android:id="@+id/best"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/best"
            android:textAlignment="center"
            android:textColor="@color/cardview_dark_background"
            android:textSize="25sp"
            android:paddingBottom="30dp"
            />
        <TextView
            android:id="@+id/pseudo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/pseudo"
            android:textAlignment="center"
            android:textColor="@color/cardview_dark_background"
            android:textSize="25sp"
            />

        <TextView
            android:id="@+id/pseudoScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            tools:text="@string/pseudo"

            android:textAlignment="center"
            android:textColor="@color/cardview_dark_background"
            android:textSize="15sp"
            android:paddingBottom="20dp"
            />

        <TextView
            android:id="@+id/difficulty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/difficult"
            android:textAlignment="center"
            android:textColor="@color/cardview_dark_background"
            android:textSize="25sp"
            />

        <TextView
            android:id="@+id/difficultyScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            tools:text="@string/difficult"
            android:textAlignment="center"
            android:textColor="@color/cardview_dark_background"
            android:textSize="15sp"
            android:paddingBottom="20dp"
            />

        <TextView
            android:id="@+id/point"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/score"
            android:textAlignment="center"
            android:textColor="@color/cardview_dark_background"
            android:textSize="25sp"
            />

        <TextView
            android:id="@+id/pointScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            tools:text="@string/score"
            android:textAlignment="center"
            android:textColor="@color/cardview_dark_background"
            android:textSize="15sp"
            android:paddingBottom="20dp"
            />

        <Button
            android:id="@+id/shareBestButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/cardview_dark_background"
            android:text="@string/share"
            android:layout_margin="50dp" />

    </LinearLayout>

</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>