<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_dark_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:orientation="vertical"
        android:weightSum="100"

        tools:layout_editor_absoluteX="5dp"
        tools:layout_editor_absoluteY="5dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:padding="10dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="25sp" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/scoreIncrementLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-medium"
                android:text="@string/score"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="30sp"

                />

            <TextView
                android:id="@+id/scoreIncrement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="5dp"
                android:paddingHorizontal="10dp"
                android:text="@string/sec"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="30sp"

                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/UpBlueButton"
                        android:layout_width="wrap_content"
                        android:layout_height="150dp"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/blue_up"
                        android:text="@string/up"
                        android:textColor="@color/white" />
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="1000dp">

                    <Button
                        android:id="@+id/LeftYellowButton"
                        android:layout_width="wrap_content"
                        android:layout_height="200dp"
                        android:layout_margin="5dp"
                        android:layout_weight="2"
                        android:backgroundTint="@color/yellow_left"
                        android:text="@string/left"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:id="@+id/coolDown"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-medium"
                        android:foreground="@drawable/border"
                        android:paddingHorizontal="10dp"
                        android:text="@string/sec"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="30sp" />

                    <Button
                        android:id="@+id/RightGreenButton"
                        android:layout_width="wrap_content"
                        android:layout_height="200dp"
                        android:layout_margin="5dp"
                        android:layout_weight="2"
                        android:backgroundTint="@color/green_right"
                        android:text="@string/right"
                        android:textColor="@color/white" />
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <Button
                        android:id="@+id/DownRedButton"
                        android:layout_width="wrap_content"
                        android:layout_height="150dp"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/red_down"
                        android:text="@string/down"
                        android:textColor="@android:color/black" />

                </TableRow>


            </TableLayout>
            <!-- <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_weight="50"
                 android:orientation="horizontal"

                 >

                 <Button
                     android:id="@+id/UpBlueButton"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_margin="5dp"
                     android:layout_weight="1"
                     android:backgroundTint="@color/blue_up"
                     android:text="@string/up"
                     android:textColor="@color/white" />

                 <Button
                     android:id="@+id/RightGreenButton"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_margin="5dp"
                     android:layout_weight="1"
                     android:backgroundTint="@color/green_right"
                     android:text="@string/right"
                     android:textColor="@color/white" />
             </LinearLayout>

             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:orientation="horizontal">



                 <LinearLayout
                     android:id="@+id/timerLayout"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:layout_weight="1"
                     android:paddingHorizontal="10dp"
                     android:foreground="@drawable/border"
                     android:orientation="horizontal">

                     <TextView
                         android:id="@+id/timerLabel"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:fontFamily="sans-serif-medium"
                         android:text="@string/timer"
                         android:textAlignment="center"
                         android:textColor="@color/white"
                         android:textSize="30sp"

                         />

                     <TextView
                         android:id="@+id/coolDown"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:fontFamily="sans-serif-medium"
                         android:paddingHorizontal="10dp"
                         android:text="@string/sec"
                         android:textAlignment="center"
                         android:textColor="@color/white"
                         android:textSize="30sp" />
                 </LinearLayout>


             </LinearLayout>

             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="50"
                 android:orientation="horizontal">

                 <Button
                     android:id="@+id/DownRedButton"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_margin="5dp"
                     android:layout_weight="1"
                     android:backgroundTint="@color/red_down"
                     android:text="@string/down"
                     android:textColor="@android:color/black" />

                 <Button
                     android:id="@+id/LeftYellowButton"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_margin="5dp"
                     android:layout_weight="1"
                     android:backgroundTint="@color/yellow_left"
                     android:text="@string/left"
                     android:textColor="@android:color/black" />
             </LinearLayout>-->
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>